// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should handle addItem 1`] = `
Array [
  Object {
    "accent": "MobX",
    "id": 1,
    "primary": "Vanilla",
  },
  Object {
    "accent": "NGXS",
    "id": 2,
    "primary": "Angular",
  },
  Object {
    "accent": "Redux",
    "id": 3,
    "primary": "React",
  },
  Object {
    "accent": "Vuex",
    "id": 4,
    "primary": "Vue",
  },
  Object {
    "accent": "bar",
    "id": 5,
    "primary": "foo",
  },
]
`;

exports[`actions should handle deleteItem 1`] = `
Array [
  Object {
    "accent": "NGXS",
    "id": 2,
    "primary": "Angular",
  },
  Object {
    "accent": "Redux",
    "id": 3,
    "primary": "React",
  },
  Object {
    "accent": "Vuex",
    "id": 4,
    "primary": "Vue",
  },
]
`;

exports[`actions should handle editItem 1`] = `
Array [
  Object {
    "accent": "bar",
    "id": 1,
    "primary": "foo",
  },
  Object {
    "accent": "NGXS",
    "id": 2,
    "primary": "Angular",
  },
  Object {
    "accent": "Redux",
    "id": 3,
    "primary": "React",
  },
  Object {
    "accent": "Vuex",
    "id": 4,
    "primary": "Vue",
  },
]
`;
